# advanced-ml-application-labs

lab_1/: Makefile  README.md  pyproject.toml  requiremets.txt
lab_1/models/: rf2.joblib
lab_1/notebooks/: 1_baseline.ipynb  2_modelling.ipynb
lab_2/my_krml_13608753/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
lab_2/my_krml_13608753/docs/: Makefile  conf.py  example.ipynb  make.bat
lab_2/my_krml_13608753/src/my_krml_13608753/: __init__.py
lab_2/my_krml_13608753/src/my_krml_13608753/data/: sets.py
lab_2/my_krml_13608753/src/my_krml_13608753/features/: dates.py
lab_2/my_krml_13608753/src/my_krml_13608753/models/: performance.py
lab_2/my_krml_13608753/tests/: test_my_krml_13608753.py
lab_2/my_krml_13608753/tests/data/: test_sets.py
