[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "lab_1"
version = "0.0.1"
description = "lab 1 adv ml uts s2 2025"
authors = [
  { name = "Declan Keir" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["lab_1"]
include = ["pyproject.toml", "lab_1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["lab_1"]
force-sort-within-sections = true

